non-embed configurations